--- a/app/pages/checkin/checkin.html
+++ b/app/pages/checkin/checkin.html
@@ -16,15 +16,14 @@
             </ion-input>
         </ion-item>
 </ion-list> -->
-<p class="statusLeft"><strong>8AM</strong><span class="statusRight"><strong>127</strong> Booked | <strong>56</strong> Checked-In</span></p>
+<p class="statusLeft"><strong>8AM</strong><span class="checkin-right"><strong>127</strong> Booked | <strong>56</strong> Checked-In</span></p>
 
 <ion-list>
-        <ion-item *ngFor="let patient of patients | slice:0:4, let i=index" (click)="itemTapped($event, patient)">
+        <ion-item *ngFor="let patient of patients | slice:0:4, let i=index"(click)= "itemTapped($event, patient)">
             <ion-avatar item-left>
                 <img src="{{patient.picture}}"/>
             </ion-avatar>
-            <h2>{{patient.firstName}} {{patient.lastName}}</h2>
-            <h4><span class='statusRight'>{{patient.doctor}}</span></h4>
+            <h2>{{patient.firstName}} {{patient.lastName}} <span class='statusRight'>{{patient.doctor}}</span></h2>
         </ion-item>
     </ion-list>
 
@@ -36,8 +35,7 @@
             <ion-avatar item-left>
                 <img src="{{patient.picture}}"/>
             </ion-avatar>
-            <h2>{{patient.firstName}} {{patient.lastName}}</h2>
-            <h4><span class='statusRight'>{{patient.doctor}}</span></h4>
+            <h2>{{patient.firstName}} {{patient.lastName}} <span class='statusRight'>{{patient.doctor}}</span></h2>
         </ion-item>
     </ion-list>
 
