--- a/app/pages/patient-detail/patient-detail.html
+++ b/app/pages/patient-detail/patient-detail.html
@@ -9,9 +9,8 @@
 <ion-content padding class="patient-detail">
  <div *ngIf="patient" class="selection">
   <ion-col class="lrg-arrow">
-     <ion-icon name="arrow-down" isActive="false"></ion-icon>
+     <ion-icon name="arrow-down" isActive="true"></ion-icon>
   </ion-col>
- <!--  <ion-icon name="arrow-down" isActive="false"></ion-icon> -->
 
     <ion-container>
          <ion-item>
@@ -19,8 +18,7 @@
                 <img src="{{patient.picture}}"/>
             </ion-avatar>
              <ion-item-content>
-                 <h2>{{patient.firstName}} {{patient.lastName}}</h2>
-                 <h4><span class='statusRight'>{{patient.doctor}}</span></h4>
+                 <h2>{{patient.firstName}} {{patient.lastName}} <span class='statusRight'>{{patient.doctor}}</span></h2>
              </ion-item-content>
          </ion-item>
 
